force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/tdc_tsw__Drip_Campaign_Action__c.object-meta.xml
<CustomObject>
    <description>Actions performed by the Drip Campaign.</description>
    <label>Drip Campaign Action</label>
    <nameField>
        <label>Drip Campaign Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Campaign Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>