force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>