force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Drip_Campaign__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Drip_Campaign__c</fullName>
    <label>Drip Campaign</label>
    <referenceTo>tdc_tsw__Drip_Campaign__c</referenceTo>
    <relationshipLabel>Drip Campaign Actions</relationshipLabel>
    <relationshipName>Drip_Campaign_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>