force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Email_Alert__c</fullName>
    <label>Email Alert</label>
    <length>30</length>
    <type>Text</type>
</CustomField>