force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__LinkTracking_Jump_Action_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__LinkTracking_Jump_Action_Id__c</fullName>
    <label>LinkTracking Jump Action Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>