force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__LinkTracking_Response_Action__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__LinkTracking_Response_Action__c</fullName>
    <label>LinkTracking Response Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop Drip</fullName>
            </value>
            <value>
                <fullName>Abort the current drip and Execute the next Drip</fullName>
            </value>
            <value>
                <fullName>Jump Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>