force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Message__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message__c</fullName>
    <label>Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>