force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Next_Action__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Next_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Action</label>
    <referenceTo>tdc_tsw__Drip_Campaign_Action__c</referenceTo>
    <relationshipLabel>Drip Campaign Actions (Next Action)</relationshipLabel>
    <relationshipName>Drip_Campaign_Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>