force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Question__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>tdc_tsw__Question__c</referenceTo>
    <relationshipLabel>Drip Campaign Actions</relationshipLabel>
    <relationshipName>Drip_Campaign_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>