force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Response_Action__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Response_Action__c</fullName>
    <label>Response Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop Drip</fullName>
            </value>
            <value>
                <fullName>Abort the current drip and Execute the next Drip</fullName>
            </value>
            <value>
                <fullName>Jump Action</fullName>
            </value>
            <value>
                <fullName>Execute the next Drip</fullName>
            </value>
            <value>
                <fullName>Execute another action of another Drip</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>