force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Schedule_Action__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Schedule_Action__c</fullName>
    <label>Schedule Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>