force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Schedule_Event__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Schedule_Event__c</fullName>
    <label>Schedule Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>