force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Schedule_Minutes__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Schedule_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Schedule (Minutes Offset)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>