force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <type>DateTime</type>
</CustomField>