force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__Schedule_Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Schedule_Time_Offset__c</fullName>
    <label>Schedule(Time Offset)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>