force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/fields/tdc_tsw__TimeOption__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__TimeOption__c</fullName>
    <label>TimeOption</label>
    <length>60</length>
    <type>Text</type>
</CustomField>