force-app/main/default/objects/tdc_tsw__Drip_Campaign_Action__c/listViews/tdc_tsw__All.listView-meta.xml
<ListView>
    <fullName>tdc_tsw__All</fullName>
    <columns>NAME</columns>
    <columns>tdc_tsw__Drip_Campaign__c</columns>
    <columns>tdc_tsw__Action_Type__c</columns>
    <columns>tdc_tsw__Schedule_Event__c</columns>
    <columns>tdc_tsw__Schedule_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>